add some stuff 1

--- a/docs/source/templates/index.html
+++ b/docs/source/templates/index.html
@@ -56,7 +56,7 @@ meta_description: Gallery of templates available to perform data labeling and an
     </div>
 
     <!-- nlp template gallery -->
-    <div class="column">
+    <!-- <div class="column">
       <a href="/templates/gallery_nlp.html">
         <div class="card">
           <div class="image-wrap">
@@ -66,10 +66,10 @@ meta_description: Gallery of templates available to perform data labeling and an
           <div class="title">Natural Language Processing</div>
         </div>
       </a>
-    </div>
+    </div> -->
 
     <!-- audio and speech transcription and recognition template gallery -->
-    <div class="column">
+    <!-- <div class="column">
       <a href="/templates/gallery_asr.html">
         <div class="card">
           <div class="image-wrap">
@@ -79,10 +79,10 @@ meta_description: Gallery of templates available to perform data labeling and an
           <div class="title">Audio/Speech Processing</div>
         </div>
       </a>
-    </div>
+    </div> -->
 
     <!-- conversational AI template gallery -->
-    <div class="column">
+    <!-- <div class="column">
       <a href="/templates/gallery_conversational_ai.html">
         <div class="card">
           <div class="image-wrap">
@@ -92,10 +92,10 @@ meta_description: Gallery of templates available to perform data labeling and an
           <div class="title">Conversational AI</div>
         </div>
       </a>
-    </div>
+    </div> -->
 
     <!-- ranking and scoring template gallery -->
-    <div class="column">
+    <!-- <div class="column">
       <a href="/templates/gallery_rns.html">
         <div class="card">
           <div class="image-wrap">
@@ -105,10 +105,10 @@ meta_description: Gallery of templates available to perform data labeling and an
           <div class="title">Ranking & Scoring</div>
         </div>
       </a>
-    </div>
+    </div> -->
 
     <!-- structured data parsing template gallery -->
-    <div class="column">
+    <!-- <div class="column">
       <a href="/templates/gallery_data_parsing.html">
         <div class="card">
           <div class="image-wrap">
@@ -118,10 +118,10 @@ meta_description: Gallery of templates available to perform data labeling and an
           <div class="title">Structured Data Parsing</div>
         </div>
       </a>
-    </div>
+    </div> -->
 
       <!--timeseries template gallery -->
-    <div class="column">
+    <!-- <div class="column">
       <a href="/templates/gallery_timeseries.html">
         <div class="card">
           <div class="image-wrap">
@@ -131,10 +131,10 @@ meta_description: Gallery of templates available to perform data labeling and an
           <div class="title">Time Series Analysis</div>
         </div>
       </a>
-    </div>
+    </div> -->
 
       <!--video template gallery -->
-    <div class="column">
+    <!-- <div class="column">
       <a href="/templates/gallery_videos.html">
         <div class="card">
           <div class="image-wrap">
@@ -144,7 +144,7 @@ meta_description: Gallery of templates available to perform data labeling and an
           <div class="title">Videos</div>
         </div>
       </a>
-    </div>
+    </div> -->
 
 </div>
 </div>
