add some stuff 1

--- a/docs/source/templates/gallery_conversational_ai.html
+++ b/docs/source/templates/gallery_conversational_ai.html
@@ -22,7 +22,7 @@ meta_description: Gallery of templates available to perform data labeling and an
   }
 </style>
 
-<div class="blog-body">
+<!-- <div class="blog-body">
   <div class="grid">
 
     <div class="column">
@@ -75,7 +75,7 @@ meta_description: Gallery of templates available to perform data labeling and an
     </div>
 
 </div>
-</div>
+</div> -->
 
 <p><a href="/templates/index.html">Back to Template Gallery</a></p>
 
