--- a/docs/source/templates/gallery_nlp.html
+++ b/docs/source/templates/gallery_nlp.html
@@ -23,7 +23,7 @@ meta_description: Gallery of nlp templates available to perform data labeling an
 </style>
 
 
-<div class="blog-body">
+<!-- <div class="blog-body">
   <div class="grid">
 
     <div class="column">
@@ -113,6 +113,6 @@ meta_description: Gallery of nlp templates available to perform data labeling an
 
 
 </div>
-</div>
+</div> -->
 
 <p><a href="/templates/index.html">Back to Template Gallery</a></p>
