--- a/docs/source/templates/gallery_cv.html
+++ b/docs/source/templates/gallery_cv.html
@@ -50,7 +50,7 @@ meta_description: Gallery of templates available to perform data labeling and an
       </a>
     </div>
 
-    <div class="column">
+    <!-- <div class="column">
       <a href="/templates/image_bbox.html">
         <div class="card">
           <div class="image-wrap">
@@ -146,7 +146,7 @@ meta_description: Gallery of templates available to perform data labeling and an
           <div class="title">Multi-Image Classification</div>
         </div>
       </a>
-    </div>
+    </div> -->
 
 
 </div>
