--- a/docs/source/templates/gallery_timeseries.html
+++ b/docs/source/templates/gallery_timeseries.html
@@ -23,7 +23,7 @@ meta_description: Gallery of templates available to perform data labeling and an
 </style>
 
 
-<div class="blog-body">
+<!-- <div class="blog-body">
   <div class="grid">
 
     <div class="column">
@@ -112,6 +112,6 @@ meta_description: Gallery of templates available to perform data labeling and an
     </div>
 
 </div>
-</div>
+</div> -->
 
 <p><a href="/templates/index.html">Back to Template Gallery</a></p>
