add some stuff 3

--- a/docs/source/templates/gallery_rns.html
+++ b/docs/source/templates/gallery_rns.html
@@ -22,9 +22,9 @@ meta_description: Gallery of templates available to perform data labeling and an
   }
 </style>
 
-<!-- 
+
 <div class="blog-body">
-  <div class="grid">
+  <!-- <div class="grid">
 
     <div class="column">
       <a href="/templates/pairwise_regression.html">
@@ -87,7 +87,7 @@ meta_description: Gallery of templates available to perform data labeling and an
       </a>
     </div>
 
+</div>-->
 </div>
-</div> -->
 
 <p><a href="/templates/index.html">Back to Template Gallery</a></p>
