--- a/docs/source/templates/gallery_timeseries.html
+++ b/docs/source/templates/gallery_timeseries.html
@@ -23,8 +23,8 @@ meta_description: Gallery of templates available to perform data labeling and an
 </style>
 
 
-<!-- <div class="blog-body">
-  <div class="grid">
+ <div class="blog-body">
+  <!-- <div class="grid">
 
     <div class="column">
       <a href="/templates/time_series_forecasting.html">
@@ -111,7 +111,7 @@ meta_description: Gallery of templates available to perform data labeling and an
       </a>
     </div>
 
-</div>
-</div> -->
+</div>-->
+</div> 
 
 <p><a href="/templates/index.html">Back to Template Gallery</a></p>
