--- a/docs/source/templates/index.html
+++ b/docs/source/templates/index.html
@@ -16,7 +16,7 @@
 
 <div class="blog-body">
 
-    <p style="margin-left: 30px;">Not sure where to start? <a href="get_started.html">Get started with templates</a> in Label Studio.</p>
+    <p style="margin-left: 30px;">Not sure where to start? <a href="get_started.html">Get started with templates</a> in Sygma Studio.</p>
 
 
   <div class="grid">
@@ -35,7 +35,7 @@
     </div>
 
     <!-- computer vision template gallery -->
-    <div class="column">
+    <!-- <div class="column">
       <a href="/templates/gallery_dynamic_labels.html">
         <div class="card">
           <div class="image-wrap">
@@ -45,7 +45,7 @@
           <div class="title">Dynamic Labels</div>
         </div>
       </a>
-    </div>
+    </div> -->
 
     <!-- nlp template gallery -->
     <!-- <div class="column">
