--- a/docs/source/templates/gallery_videos.html
+++ b/docs/source/templates/gallery_videos.html
@@ -22,9 +22,9 @@ meta_description: Gallery of templates available to perform data labeling and an
   }
 </style>
 
-<!-- 
+
 <div class="blog-body">
-  <div class="grid">
+ <!--  <div class="grid">
 
     <div class="column">
       <a href="/templates/video_classification.html">
@@ -51,7 +51,7 @@ meta_description: Gallery of templates available to perform data labeling and an
       </a>
     </div>
 
-</div>
 </div> -->
+</div>
 
 <p><a href="/templates/index.html">Back to Template Gallery</a></p>
