--- a/label_studio/templates/500.html
+++ b/label_studio/templates/500.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-  <title>500 | Label Studio</title>
+  <title>500 | Sygma Studio</title>
   <link rel="stylesheet" href="{{ settings.HOSTNAME }}{% static 'css/error.css' %}"/>
 {% endblock %}
 
