add some stuff 5

--- a/label_studio/users/templates/users/user_account.html
+++ b/label_studio/users/templates/users/user_account.html
@@ -106,7 +106,7 @@
         </textarea>
         <p class="actions">
           <button type="button" class="blinking-status ls-button" data-copy="example_fetch">Copy</button>
-          <a class="ls-button" href="https://labelstud.io/guide/api.html" target="_blank">Documentation</a>
+          <a class="ls-button" href="api.html" target="_blank">Documentation</a>
         </p>
       </div>
     </form>
