--- a/docs/source/playground/template_codes.ejs
+++ b/docs/source/playground/template_codes.ejs
@@ -380,9 +380,9 @@
 
 It's the simplest example of TimeSeries usage.
 Read more about tags in the documentation:
-<a href="https://labelstud.io/tags/timeseries.html" target="_blank">TimeSeries</a>,
-<a href="https://labelstud.io/tags/timeserieslabels.html" target="_blank">TimeSeriesLabels</a>,
-<a href="https://labelstud.io/tags/timeseries.html#Channel" target="_blank">Channel</a>.
+<a href="/tags/timeseries.html" target="_blank">TimeSeries</a>,
+<a href="/tags/timeserieslabels.html" target="_blank">TimeSeriesLabels</a>,
+<a href="/tags/timeseries.html#Channel" target="_blank">Channel</a>.
 
 This config allows to do:
   * whole signal classification: use choice checkboxes for it
@@ -433,12 +433,12 @@ This config allows to do:
 
 4. After setup you can import your CSV files on Import page and Label Studio will host them OR
 upload your CSV to your hosting (e.g.: `https://my.domain.com/time-series.csv`) and
-<a target="_blank" href="https://labelstud.io/guide/tasks.html">prepare LS tasks for them.</a>
+<a target="_blank" href="/guide/tasks.html">prepare LS tasks for them.</a>
 
     Read more about
-<a href="https://labelstud.io/tags/timeseries.html" target="_blank">TimeSeries</a>,
-<a href="https://labelstud.io/tags/timeserieslabels.html" target="_blank">TimeSeriesLabels</a>,
-<a href="https://labelstud.io/tags/timeseries.html#Channel" target="_blank">Channel</a>.
+<a href="/tags/timeseries.html" target="_blank">TimeSeries</a>,
+<a href="/tags/timeserieslabels.html" target="_blank">TimeSeriesLabels</a>,
+<a href="/tags/timeseries.html#Channel" target="_blank">Channel</a>.
 -->
 
 <View>
@@ -469,7 +469,7 @@ upload your CSV to your hosting (e.g.: `https://my.domain.com/time-series.csv`) 
 ### Notes
 
 * JSON is a native format for Label Studio and it allows to store time series data right in LS task.
-<a target="_blank" href="https://labelstud.io/guide/tasks.html">Read more about LS tasks in documentation.</a>
+<a target="_blank" href="/guide/tasks.html">Read more about LS tasks in documentation.</a>
 
 * JSON is necessary when you need to combine multiple data source in one task.
 For example, you mix two CSV files for time series into one labeling task or
@@ -496,9 +496,9 @@ if you try to build Text + TimeSeries configuration.
 3. Add more `<Channel>` tags for more columns if needed
 
     Read more about
-<a href="https://labelstud.io/tags/timeseries.html" target="_blank">TimeSeries</a>,
-<a href="https://labelstud.io/tags/timeserieslabels.html" target="_blank">TimeSeriesLabels</a>,
-<a href="https://labelstud.io/tags/timeseries.html#Channel" target="_blank">Channel</a>.
+<a href="/tags/timeseries.html" target="_blank">TimeSeries</a>,
+<a href="/tags/timeserieslabels.html" target="_blank">TimeSeriesLabels</a>,
+<a href="/tags/timeseries.html#Channel" target="_blank">Channel</a>.
 -->
 
 <View>
@@ -532,9 +532,9 @@ it will be marked as `"instant": true` in the results.
 * To display signal values use `displayFormat` as in <a href="https://github.com/d3/d3-format#locale_format" target="_blank">D3 formats</a>.
 * Read more about Time Series in the documentation:
 
-    * <a href="https://labelstud.io/tags/timeseries.html" target="_blank">TimeSeries tag</a>
-    * <a href="https://labelstud.io/tags/timeserieslabels.html" target="_blank">TimeSeriesLabels tag</a>
-    * <a href="https://labelstud.io/tags/timeseries.html#Channel" target="_blank">Channel tag</a>
+    * <a href="/tags/timeseries.html" target="_blank">TimeSeries tag</a>
+    * <a href="/tags/timeserieslabels.html" target="_blank">TimeSeriesLabels tag</a>
+    * <a href="/tags/timeseries.html#Channel" target="_blank">Channel tag</a>
 -->
 
 <View>
@@ -578,9 +578,9 @@ it will be marked as `"instant": true` in the results.
 ### Notes
 * Select region to show the next step with classification and rating.
 * You can label regions with
-  <a href="https://labelstud.io/tags/choices.html" target="_blank">choices</a>,
-  <a href="https://labelstud.io/tags/textarea.html" target="_blank">text descriptions</a>,
-  <a href="https://labelstud.io/tags/rating.html" target="_blank">ratings</a> (and more) per the each region individually.
+  <a href="/tags/choices.html" target="_blank">choices</a>,
+  <a href="/tags/textarea.html" target="_blank">text descriptions</a>,
+  <a href="/tags/rating.html" target="_blank">ratings</a> (and more) per the each region individually.
 
 -->
 
@@ -1110,12 +1110,12 @@ it will be marked as `"instant": true` in the results.
 
 4. After setup you can import your CSV files on Import page and Label Studio will host them OR
 upload your CSV to your hosting (e.g.: `https://my.domain.com/time-series.csv`) and
-<a target="_blank" href="https://labelstud.io/guide/tasks.html">prepare LS tasks for them.</a>
+<a target="_blank" href="/guide/tasks.html">prepare LS tasks for them.</a>
 
     Read more about
-<a href="https://labelstud.io/tags/timeseries.html" target="_blank">TimeSeries</a>,
-<a href="https://labelstud.io/tags/timeserieslabels.html" target="_blank">TimeSeriesLabels</a>,
-<a href="https://labelstud.io/tags/timeseries.html#Channel" target="_blank">Channel</a>.
+<a href="/tags/timeseries.html" target="_blank">TimeSeries</a>,
+<a href="/tags/timeserieslabels.html" target="_blank">TimeSeriesLabels</a>,
+<a href="/tags/timeseries.html#Channel" target="_blank">Channel</a>.
 -->
 
 <View>
@@ -1155,12 +1155,12 @@ upload your CSV to your hosting (e.g.: `https://my.domain.com/time-series.csv`) 
 
 4. After setup you can import your CSV files on Import page and Label Studio will host them OR
 upload your CSV to your hosting (e.g.: `https://my.domain.com/time-series.csv`) and
-<a target="_blank" href="https://labelstud.io/guide/tasks.html">prepare LS tasks for them.</a>
+<a target="_blank" href="/guide/tasks.html">prepare LS tasks for them.</a>
 
     Read more about
-<a href="https://labelstud.io/tags/timeseries.html" target="_blank">TimeSeries</a>,
-<a href="https://labelstud.io/tags/timeserieslabels.html" target="_blank">TimeSeriesLabels</a>,
-<a href="https://labelstud.io/tags/timeseries.html#Channel" target="_blank">Channel</a>.
+<a href="/tags/timeseries.html" target="_blank">TimeSeries</a>,
+<a href="/tags/timeserieslabels.html" target="_blank">TimeSeriesLabels</a>,
+<a href="/tags/timeseries.html#Channel" target="_blank">Channel</a>.
 -->
 
 <View>
@@ -1193,7 +1193,7 @@ upload your CSV to your hosting (e.g.: `https://my.domain.com/time-series.csv`) 
  two different TimeSeries instances for Signal 1 and Signal 2.
  * Select region first and add a relation to other region using [+]
  button on Results panel at the bottom.
- <a target="_blank" href="https://labelstud.io/guide/labeling.html#Add-relation">Read more about relations</a>
+ <a target="_blank" href="/guide/labeling.html#Add-relation">Read more about relations</a>
 -->
 
 <View>
@@ -1325,7 +1325,7 @@ upload your CSV to your hosting (e.g.: `https://my.domain.com/time-series.csv`) 
  * Link text pieces with time-series events using this template.
  * Select region first and add a relation to other region using [+]
  button on Results panel at the bottom.
- <a target="_blank" href="https://labelstud.io/guide/labeling.html#Add-relation">Read more about relations</a>
+ <a target="_blank" href="/guide/labeling.html#Add-relation">Read more about relations</a>
 -->
 
 <View>
