--- a/label_studio/frontend/src/components/Spinner/Spinner.styl
+++ b/label_studio/frontend/src/components/Spinner/Spinner.styl
@@ -2,7 +2,7 @@
   --spinner-size 50px
   --corner-size calc(var(--spinner-size) * 0.375)
   --spinner-duration 2.5s
-  --spinner-color #FA8C16
+  --spinner-color #008787
 
   position relative
   width var(--spinner-size)
@@ -15,8 +15,8 @@
     height var(--spinner-size)
     position absolute
     transform translate(-50%, -50%)
-    background-color rgba(#FA8C16, 0.2)
-    box-shadow 0 0 0 calc(var(--spinner-size) * 0.0625) #FFA940 inset, 0 0 0 calc(var(--spinner-size) * 0.0625) #FFA940
+    background-color rgba(#008787, 0.2)
+    box-shadow 0 0 0 calc(var(--spinner-size) * 0.0625) #00C8C8 inset, 0 0 0 calc(var(--spinner-size) * 0.0625) #00C8C8
     will-change transform, width, height
 
     &:not(&_stopped)
