add some themplate to

--- a/label_studio/frontend/src/components/Spinner/Spinner.styl
+++ b/label_studio/frontend/src/components/Spinner/Spinner.styl
@@ -24,7 +24,7 @@
 
     & > span
       position absolute
-      background-color #FA8C16
+      background-color #008787
       width var(--corner-size)
       height var(--corner-size)
       border-radius calc(var(--corner-size) * 0.16)
