add some themplate to

--- a/docs/themes/htx/layout/partials/index.ejs
+++ b/docs/themes/htx/layout/partials/index.ejs
@@ -499,7 +499,7 @@ menu && menu.classList.add('main__page__header')
         })
         </script>
         <div class="after__community">
-          <a href="https://slack.labelstudio.heartex.com/?source=site">
+          <a href="https://sygmai.slack.com/?source=site">
             <span><img src="<%- url_for("/images/new/logoslack.svg") %>" alt="logoslack"></span>
             Join Slack
           </a>
@@ -549,7 +549,7 @@ menu && menu.classList.add('main__page__header')
             <img src="<%- url_for("/images/new/logofooter.svg") %>" alt="logofooter">
           </a>
           <ul class="social__list">
-            <li><a href="https://slack.labelstudio.heartex.com/?source=site-footer"><img src="<%- url_for("/images/new/foot3.svg") %>" alt="footerlogo"></a></li>
+            <li><a href="https://sygmai.slack.com/?source=site-footer"><img src="<%- url_for("/images/new/foot3.svg") %>" alt="footerlogo"></a></li>
             <li><a href="https://twitter.com/heartexlabs"><img src="<%- url_for("/images/new/foot2.svg") %>" alt="footerlogo"></a></li>
 	    <li><a href="https://www.linkedin.com/company/heartex/"><img src="<%- url_for("/images/new/foot5.svg") %>" alt="footerlogo"></a></li>            
 	    <li><a href="https://github.com/heartexlabs/"><img src="<%- url_for("/images/new/foot4.svg") %>" alt="footerlogo"></a></li>            
