--- a/docs/themes/htx/layout/partials/heartex_header.ejs
+++ b/docs/themes/htx/layout/partials/heartex_header.ejs
@@ -7,7 +7,7 @@
         </a>
       </div>
 
-      <a class="join__slack" target="_blank" href="https://slack.labelstudio.heartex.com/?source=site-header">
+      <a class="join__slack" target="_blank" href="https://sygmai.slack.com/?source=site-header">
         <img src="<%- url_for("/images/new/logoslack.svg") %>" alt="logoslack" />
         Join Community
       </a>
