--- a/label_studio/templates/base.html
+++ b/label_studio/templates/base.html
@@ -7,7 +7,6 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <meta name="author" content="Label Studio"/>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no">
 
@@ -42,7 +41,7 @@
   </script>
 
   {% block head %}
-    <title>Label Studio</title>
+    <title>Sygma Studio</title>
   {% endblock %}
 
   {% get_current_language as LANGUAGE_CODE %}
