add some themplate to

--- a/label_studio/users/templates/users/user_account.html
+++ b/label_studio/users/templates/users/user_account.html
@@ -136,7 +136,7 @@
 
     </form>
 
-    Notifications
+    <!-- Notifications-->
     <form action="{% url 'user-detail' pk=user.pk %}?update-notifications=1" method="patch" class="notifications block-info" id="notifications">
       <header>
         Notifications
@@ -168,7 +168,7 @@
         </td></tr>
       </table>
 
-    </form>
+    </form> 
 
 
   </div>
