--- a/label_studio/users/templates/users/user_account.html
+++ b/label_studio/users/templates/users/user_account.html
@@ -160,7 +160,7 @@
                  onclick="smart_submit()">
 
           <label for="allow_newsletters_visual" style="display: inline-block; cursor: pointer; margin-top: -10px">
-            Get the latest news & tips from Heidi
+            Get info
             <img src="{{ settings.HOSTNAME }}{% static 'images/heidi.png' %}" alt="Heidi"
                  width="25" style="display: inline; margin: 0; position: relative; top: 5px; left: 0">
           </label>
@@ -169,7 +169,6 @@
       </table>
 
     </form> 
-
 
   </div>
 
