add some themplate to

--- a/label_studio/users/templates/users/user_account.html
+++ b/label_studio/users/templates/users/user_account.html
@@ -161,7 +161,7 @@
 
           <label for="allow_newsletters_visual" style="display: inline-block; cursor: pointer; margin-top: -10px">
             Get info
-            <img src="{{ settings.HOSTNAME }}{% static 'images/heidi.png' %}" alt="Heidi"
+            <img src="{{ settings.HOSTNAME }}{% static 'images/heidi.png' %}" alt="sygma"
                  width="25" style="display: inline; margin: 0; position: relative; top: 5px; left: 0">
           </label>
 
