add some themplate to

--- a/label_studio/frontend/src/components/Menubar/Menubar.styl
+++ b/label_studio/frontend/src/components/Menubar/Menubar.styl
@@ -56,7 +56,7 @@
     width 8px
     height 8px
     border-radius 50%
-    background #09f
+    background #008787
 
 .newsletter-menu-item
   width 200px
@@ -67,12 +67,12 @@
   margin-top -8px
   font-size 14px
   position relative
-  background #09f2
+  background #0087872
   line-height 1.4em
   transition 0.2s all
 
   .main-menu &:hover
-    background #09f3
+    background #0087873
 
 .newsletter-menu-badge
   position absolute
@@ -82,4 +82,4 @@
   right 8px
   top 8px
   border-radius 50%
-  background #09f
+  background #008787
